# selenium-wrapper

./: .dockerignore  .env  .gitignore  AGENTS.md  Dockerfile  README.md  conftest.py  docker-compose.yml  env.py  pyproject.toml  requirements.txt
.github/: dependabot.yml  ruff.yaml  run-tests.yml
.github/workflows/: ruff.yaml  ruff.yml  run-tests.yml
elements/: __init__.py  file_download.py  flatpickr.py  login.py  practice_test_automation.py  read_table.py  satcat.py  sauce_demo.py  search_with_dropdown.py  weather_gov.py
selenium_wrapper/: __init__.py  browsers.py  locate_by.py  selenium.py
selenium_wrapper/methods/: __init__.py
selenium_wrapper/tests/: test_datepicker.py  test_selenium.py
selenium_wrapper/utils/: __init__.py  datepicker.py  file_paths.py  timedif.py  validate.py
tests/: conftest.py
tests/test_samples/: conftest.py  test_file_download.py  test_flatpickr.py  test_landing_pages.py  test_login.py  test_practice_automation.py  test_read_table.py  test_satcat_search.py  test_sauce_demo.py  test_search_with_dropdown.py  test_weather_gov.py  test_wiki_image_download.py
